--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "heroku-postbuild": "cd socket-client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +14,7 @@
     "socket.io": "^2.2.0"
   },
   "engines": {
-    "node": ">==8.0.0"
+    "node": "10.16.3",
+    "npm": "6.9.0"
   }
 }
