--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "compression": "1.7.4",
+    "cors": "2.8.5",
+    "dotenv": "7.0.0"
   },
   "engines": {
     "node": "10.16.3",
