--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4",
-    "socket.io": "^2.2.0",
     "compression": "1.7.4",
     "cors": "2.8.5",
-    "dotenv": "7.0.0"
+    "dotenv": "7.0.0",
+    "express": "^4.16.4",
+    "path": "^0.12.7",
+    "socket.io": "^2.2.0"
   },
   "engines": {
     "node": "10.16.3",
